0.03
 - Update Tickit to 0.53 version.
 - Update Tickit::Widget::FloatBox to 0.03 version.
 - Update Tickit::Widgets to 0.20 version.

0.02 2015-04-20T12:34:07+02:00
 - Add Tickit::Widget::Figlet 0.003 version.
 - Add Tickit::Widget::Term 0.002 version.
 - Update Module::Install to 1.15 version.
 - Update Tickit::Widget::Tabbed to 0.18 version.

0.01 2015-02-12T19:29:24+01:00
 - First version