@@ -14,7 +14,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.15'
+generated_by: 'Module::Install version 1.16'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,7 +25,7 @@ no_index:
     - inc
     - t
 requires:
-  Tickit: 0.5
+  Tickit: 0.53
   Tickit::Widget::Breadcrumb: 0.003
   Tickit::Widget::Calendars: 0.001
   Tickit::Widget::Choice: 0.01
