@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.16 version.
  - Update Tickit to 0.53 version.
  - Update Tickit::Widget::FloatBox to 0.03 version.
  - Update Tickit::Widgets to 0.20 version.
